--- a/packages/ember-touch/package.json
+++ b/packages/ember-touch/package.json
@@ -4,16 +4,16 @@
   "description": "The Ember touch system",
   "homepage": "http://emberjs.com",
   "author": "Majd Taby",
-  "version": "2.0.beta.1",
+  "version": "0.9.2",
 
   "directories": {
-    "lib"       : "./lib"
+    "lib": "lib"
   },
 
   "dependencies": {
-    "spade"                 : "~> 1.0",
-    "jquery"                : "~> 1.6",
-    "sproutcore-views"      : "2.0.beta.3"
+    "spade"       : "~> 1.0",
+    "jquery"      : ">= 0",
+    "ember-views" : ">= 0"
   },
 
   "dependencies:development": {
@@ -24,7 +24,7 @@
     
     "bpm_libs.js": {
       "directories": ["lib"],
-      "modes":        "*"
+      "modes":       "*"
     },
     
     "sproutcore-touch/bpm_tests.js": {
